@@ -479,8 +479,8 @@ $HOME/.ssh/id_dsa.pub $HOME/.ssh/authorized_keys2</span><br>
       be done on the graphics processing unit (GPU) of an NVIDIA graphics card. See 
       the <a href="guide.html#UsingGPU">IMOD User's Guide</a> for instructions on 
       setting up a machine to use the GPU. Reconstructions can also be done in 
-      parallel using GPUs on several computers, although it is not yet possible to 
-      use more than one GPU on a single computer.
+      parallel using GPUs on several computers, as well as with
+      more than one GPU on a single computer.
       <br>
       <h1 class="western"><a name="Other_Interfaces"></a>Other Interfaces in Etomo</h1>
     <p class="western">eTomo provides a good framework for developing new interfaces 
